--- a/public/responsive/small/landscape.css
+++ b/public/responsive/small/landscape.css
@@ -1,13 +1,13 @@
 .debug {
 background:blue;
 }
-.branding {
-  height:27em;
-}
-.brand-solid-texture {
-  height:19em;
+
+ .brand-solid-texture {
+  height: 396px;
 }
 .branding .mobiles {
-  background-image:url('/images/branding/mobiles-480.png');
-  height:13em;
+  background-size: contain;
+  background-image:url('/images/branding/mobiles-728.png');
+  height: 316px;
+  margin-left: 3%;
 }
